# oop-labs-deprecated

./: .gitignore
lab1/: lab1.sln
lab1/flipbyte/: flipbyte.sln
lab1/flipbyte/flipbyte/: 255)  flipbyte.cpp  flipbyte.vcxproj  flipbyte.vcxproj.filters  test.bat
lab1/flipbyte/flipbyte/test-data/: TestErrorConverting-Output.txt  TestInvalidArgument-Output.txt
lab1/multmatrix/: multmatrix.sln
lab1/multmatrix/multmatrix/: matrix-1.txt  multmatrix.cpp  multmatrix.vcxproj  multmatrix.vcxproj.filters
lab1/replace/: replace.sln
lab1/replace/replace/: input.txt  output.txt  replace.cpp  replace.vcxproj  replace.vcxproj.filters  test.bat
lab1/replace/replace/test-data/: TestEmptyReplaceString-Input.txt  TestEmptyReplaceString-Output.txt  TestEmptySearchString-Input.txt  TestInvalidArgument-Output.txt  TestInvalidInputFilename-Output.txt  TestInvalidOutputFilename-Output.txt  TestMultipleOccurrences-Input.txt  TestMultipleOccurrences-Output.txt  TestPhraseToPhraseReplacement-Output.txt  TestStress-Input.txt  TestStress-Output.txt
lab2/removeExtraSpaces/: CMakeLists.txt  main.cpp
lab2/removeExtraSpaces/src/: StringsFunction.cpp  StringsFunction.h
lab2/removeExtraSpaces/unit-tests/: CMakeLists.txt  tests.cpp
lab2/vector/: CMakeLists.txt  main.cpp
lab2/vector/e2e-tests/: run-e2e-tests.sh
lab2/vector/e2e-tests/test-data/: 1-test-output  2-test-input  2-test-output
lab2/vector/unit-tests/: tests.cpp
lab2/vector/vector/: vector.cpp  vector.h
lab2/wordCounter/: CMakeLists.txt  main.cpp
lab2/wordCounter/e2e-tests/test-data/: 1-test-input  1-test-output
lab2/wordCounter/src/: wordCounter.cpp  wordCounter.h
lab2/wordCounter/unit-tests/: CMakeLists.txt  tests.cpp
lab3/TV/: TV.sln
lab3/TV/TV/: TV.cpp  TV.vcxproj  TV.vcxproj.filters  TVSet.cpp  TVSet.h
lab3/TV/Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters
tools/catch2/: catch.hpp
